M1: record ADR-0021 validation evidence