@@ -40,7 +40,7 @@ Une ADR proposée ne devient pas automatiquement une décision définitive parce
 | [ADR-0018](0018-sqlite-initial-persistent-store.md) | SQLite comme backend persistant initial derrière le port | **Acceptée avec contraintes — M0** |
 | [ADR-0019](0019-maven-coordinates-java-namespace.md) | `io.github.fturleque` + namespace Java `com.morpheus.*` | **Acceptée — bootstrap M1** |
 | [ADR-0020](0020-workspace-root-resolution.md) | Discovery explicit-first avec fallback Git structurel sans dépendance au binaire Git | **Acceptée — M1** |
-| [ADR-0021](0021-sqlite-schema-migrations-foundation.md) | Migrations SQLite explicites, versionnées et schéma V1 minimal normalisé | **Proposée — validation M1** |
+| [ADR-0021](0021-sqlite-schema-migrations-foundation.md) | Migrations SQLite explicites, versionnées et schéma V1 minimal normalisé | **Acceptée — M1** |
 
 La décision de sortie C0 est consignée dans [`../VALIDATION_C0.md`](../VALIDATION_C0.md).
 
@@ -137,7 +137,7 @@ Le comportement spécifique aux symlinks/junctions reste différé tant qu'un ca
 
 ### ADR-0021
 
-La fondation de store M1 doit démontrer avant acceptation :
+La fondation de store M1 a démontré sous Windows :
 
 ```text
 UUIDv7 opaque
@@ -146,13 +146,18 @@ SQLite store behind same port
 schema_migrations ledger
 V1 = projects + knowledge_snapshots metadata
 migration checksum immutability
+migration history tampering rejected
 atomic snapshot activation
 stale predecessor rejection
 persistence across reopen
 no generic JSON domain payload
+39/39 tests PASS
+BUILD SUCCESS
 ```
 
 Les tables métier M2+ ne doivent pas être créées avant stabilisation de leurs contrats.
+
+Le warning JDK 24 `--enable-native-access=ALL-UNNAMED` du driver SQLite reste une contrainte runtime/packaging à traiter avant stabilisation CLI ; il n'est pas bloquant pour M1.
 
 ---
 
